# sodium-sys

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  index.html  params.json  parsebench
benches/: all.rs  lib.rs  randombytes.rs  utils.rs
benches/crypto/: crypto_aead.rs  crypto_auth.rs  crypto_box.rs  crypto_key.rs  crypto_keypair.rs  crypto_nonce.rs  crypto_secretbox.rs  crypto_sign.rs  crypto_verify.rs
benches/crypto/asymmetrickey/: auth_keypair.rs  authenc.rs  mod.rs  sealbox.rs  sign.rs  sign_keypair.rs
benches/crypto/hash/: generichash.rs  mod.rs  passhash.rs  sha2.rs  shorthash.rs
benches/crypto/symmetrickey/: aead.rs  auth.rs  authenc.rs  hmacsha2.rs  key.rs  mod.rs
benches/crypto/utils/: mod.rs  nonce.rs  randombytes.rs  secmem.rs  verify.rs
docs/: search-index.js
docs/sodium_sys/: enum.SSError.html  index.html  sidebar-items.js
docs/sodium_sys/core/: fn.init.html  index.html  sidebar-items.js
docs/sodium_sys/crypto/: index.html  sidebar-items.js
docs/sodium_sys/randombytes/: fn.random.html  fn.random_byte_array.html  fn.uniform.html  index.html
docs/sodium_sys/utils/: fn.allocarray.html  fn.bin2hex.html  fn.free.html  fn.hex2bin.html  fn.increment.html  fn.malloc.html  fn.memcmp.html  fn.memzero.html  fn.mlock.html  fn.mprotect_noaccess.html  fn.mprotect_readonly.html  fn.mprotect_readwrite.html  fn.munlock.html  index.html  sidebar-items.js
docs/sodium_sys/version/: fn.library_version_major.html  fn.library_version_minor.html  fn.version.html  index.html
docs/src/libc/: lib.rs.html
src/: core.rs  crypto_verify.rs  crypto_verify_16.rs  lib.rs  randombytes.rs  utils.rs  version.rs
src/crypto/: crypto_verify.rs  key.rs  keypair.rs  nonce.rs
tests/: all.rs  core.rs  lib.rs  randombytes.rs  utils.rs  version.rs
tests/crypto/: crypto_aead.rs  crypto_auth.rs  crypto_box.rs  crypto_key.rs  crypto_keypair.rs  crypto_nonce.rs  crypto_secretbox.rs  crypto_sign.rs  crypto_verify.rs
(+128 files in other folders)
