[package]
name = "sodium-sys"
version = "0.0.5-pre"
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "FFI binding to libsodium"
documentation = "http://rustyhorde.github.io/sodium-sys/docs/sodium_sys/index.html"
homepage = "http://rustyhorde.github.io/sodium-sys"
repository = "https://github.com/rustyhorde/sodium-sys.git"
keywords = ["libsodium", "NaCl", "crypto", "sodium-sys"]
license = "MIT"
links = "sodium"
build = "build.rs"

[features]
latest = []
pwhash_bench = []
mlock_tests = []

[build-dependencies]
pkg-config = "~0.3.6"

[dependencies]
libc = "~0.2.2"

[dev-dependencies]
regex = "~0.1.41"
